{
  "version": 4,
  "terraform_version": "1.8.1",
  "serial": 272,
  "lineage": "ea356cf5-5496-7d21-3cd5-0cc68658e538",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "devnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/networkInterfaces/devnic",
            "internal_domain_name_suffix": "uc2arazqc4lujjfyd4gbwwdiad.dx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/virtualNetworks/devnetwork/subnets/devsubnet"
              }
            ],
            "location": "westus",
            "name": "devnic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "devgroup"
          },
          "dependencies": [
            "azurerm_resource_group.devgroup",
            "azurerm_subnet.devsubnet",
            "azurerm_virtual_network.devnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hubnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/networkInterfaces/hubnic",
            "internal_domain_name_suffix": "v2vdr2u0hc1ufpxwcjnvpsr5dd.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.2.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork/subnets/hubsubnet"
              }
            ],
            "location": "eastus",
            "name": "hubnic",
            "private_ip_address": "10.2.1.4",
            "private_ip_addresses": [
              "10.2.1.4"
            ],
            "resource_group_name": "hubgroup"
          },
          "dependencies": [
            "azurerm_resource_group.hubgroup",
            "azurerm_subnet.hubsubnet",
            "azurerm_virtual_network.hubnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "testnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/networkInterfaces/testnic",
            "internal_domain_name_suffix": "to5dengad1sepffkhgsvlfu1ea.gx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/virtualNetworks/testnetwork/subnets/testsubnet"
              }
            ],
            "location": "centralus",
            "name": "testnic",
            "private_ip_address": "10.1.1.4",
            "private_ip_addresses": [
              "10.1.1.4"
            ],
            "resource_group_name": "testgroup"
          },
          "dependencies": [
            "azurerm_resource_group.testgroup",
            "azurerm_subnet.testsubnet",
            "azurerm_virtual_network.testnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "devnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/networkSecurityGroups/devnsg",
            "location": "westus",
            "name": "devnsg",
            "resource_group_name": "devgroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.2.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "devicmp",
                "priority": 100,
                "protocol": "Icmp",
                "source_address_prefix": "10.0.1.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.2.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "devrdp",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.devgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "hubnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/networkSecurityGroups/hubnsg",
            "location": "eastus",
            "name": "hubnsg",
            "resource_group_name": "hubgroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.2.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "hubicmp",
                "priority": 100,
                "protocol": "Icmp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.4",
                  "10.1.1.4"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.2.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "hubrdp",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [
                  "10.0.1.4",
                  "10.1.1.4"
                ],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hubgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "testnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/networkSecurityGroups/testnsg",
            "location": "centralus",
            "name": "testnsg",
            "resource_group_name": "testgroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.2.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "testicmp",
                "priority": 100,
                "protocol": "Icmp",
                "source_address_prefix": "10.1.1.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.2.1.4",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "testrdp",
                "priority": 200,
                "protocol": "Tcp",
                "source_address_prefix": "10.1.1.4",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.testgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "devsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/virtualNetworks/devnetwork/subnets/devsubnet",
            "name": "devsubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devgroup",
            "virtual_network_name": "devnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.devgroup",
            "azurerm_virtual_network.devnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork/subnets/hubsubnet",
            "name": "hubsubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hubgroup",
            "virtual_network_name": "hubnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.hubgroup",
            "azurerm_virtual_network.hubnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "testsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/virtualNetworks/testnetwork/subnets/testsubnet",
            "name": "testsubnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "testgroup",
            "virtual_network_name": "testnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.testgroup",
            "azurerm_virtual_network.testnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "devnsgassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/virtualNetworks/devnetwork/subnets/devsubnet",
            "network_security_group_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/networkSecurityGroups/devnsg",
            "subnet_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/virtualNetworks/devnetwork/subnets/devsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.devnsg",
            "azurerm_resource_group.devgroup",
            "azurerm_subnet.devsubnet",
            "azurerm_virtual_network.devnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "hubnsgassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork/subnets/hubsubnet",
            "network_security_group_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/networkSecurityGroups/hubnsg",
            "subnet_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork/subnets/hubsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.hubnsg",
            "azurerm_resource_group.hubgroup",
            "azurerm_subnet.hubsubnet",
            "azurerm_virtual_network.hubnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "testnsgassociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/virtualNetworks/testnetwork/subnets/testsubnet",
            "network_security_group_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/networkSecurityGroups/testnsg",
            "subnet_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/virtualNetworks/testnetwork/subnets/testsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.testnsg",
            "azurerm_resource_group.testgroup",
            "azurerm_subnet.testsubnet",
            "azurerm_virtual_network.testnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "devnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "8308b8a0-1730-4497-a4b8-1f8c1b586803",
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/virtualNetworks/devnetwork",
            "location": "westus",
            "name": "devnetwork",
            "resource_group_name": "devgroup"
          },
          "dependencies": [
            "azurerm_resource_group.devgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hubnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "f2382aaf-389a-42b7-bef6-125b57ca3f1b",
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork",
            "location": "eastus",
            "name": "hubnetwork",
            "resource_group_name": "hubgroup"
          },
          "dependencies": [
            "azurerm_resource_group.hubgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "testnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3432be9b-1ec0-47e4-94aa-39a555969b20",
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/virtualNetworks/testnetwork",
            "location": "centralus",
            "name": "testnetwork",
            "resource_group_name": "testgroup"
          },
          "dependencies": [
            "azurerm_resource_group.testgroup"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "devtohub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/virtualNetworks/devnetwork/virtualNetworkPeerings/devtohub",
            "name": "devtohub",
            "remote_virtual_network_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork",
            "resource_group_name": "devgroup",
            "use_remote_gateways": false,
            "virtual_network_name": "devnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.devgroup",
            "azurerm_resource_group.hubgroup",
            "azurerm_virtual_network.devnetwork",
            "azurerm_virtual_network.hubnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hubtodev",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork/virtualNetworkPeerings/hubtodev",
            "name": "hubtodev",
            "remote_virtual_network_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/devgroup/providers/Microsoft.Network/virtualNetworks/devnetwork",
            "resource_group_name": "hubgroup",
            "use_remote_gateways": false,
            "virtual_network_name": "hubnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.devgroup",
            "azurerm_resource_group.hubgroup",
            "azurerm_virtual_network.devnetwork",
            "azurerm_virtual_network.hubnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hubtotest",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork/virtualNetworkPeerings/hubtotest",
            "name": "hubtotest",
            "remote_virtual_network_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/virtualNetworks/testnetwork",
            "resource_group_name": "hubgroup",
            "use_remote_gateways": false,
            "virtual_network_name": "hubnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.hubgroup",
            "azurerm_resource_group.testgroup",
            "azurerm_virtual_network.hubnetwork",
            "azurerm_virtual_network.testnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "testtohub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/testgroup/providers/Microsoft.Network/virtualNetworks/testnetwork/virtualNetworkPeerings/testtohub",
            "name": "testtohub",
            "remote_virtual_network_id": "/subscriptions/0c599263-4154-411a-83cb-2bd970d3c1ee/resourceGroups/hubgroup/providers/Microsoft.Network/virtualNetworks/hubnetwork",
            "resource_group_name": "testgroup",
            "use_remote_gateways": false,
            "virtual_network_name": "testnetwork"
          },
          "dependencies": [
            "azurerm_resource_group.hubgroup",
            "azurerm_resource_group.testgroup",
            "azurerm_virtual_network.hubnetwork",
            "azurerm_virtual_network.testnetwork"
          ]
        }
      ]
    }
  ]
}